--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "faker": "^5.5.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "tedious": "^18.6.1"
+    "tedious": "^18.6.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
